# rustshop

./: .gitignore  ONBOARDING.md  README.bootstrapping.md  README.md  README.onboarding.md  README.philosophy.md  README.standalone.md  README.techstack.md  flake.nix
.config/flakebox/: id
.github/workflows/: ci-services.yml  ci.yml  flakebox-ci.yml
.rustshop/: shop.yaml
images/backend/: README.md  configuration.nix  flake.nix  users.nix
infra/: .env.template  .gitignore  .shrc.template  README.bootstrapping.md  flake.nix  install-ack.sh  install-aks.sh
infra/_common/: locals-common.tf  state.tf  variables-common.tf
infra/_rustshop/: Cargo.toml  flake.nix  shell-hook.sh
infra/_rustshop/old/aws-bootstrap/: Cargo.toml  README.md  aws-bootstrap.build.sh
infra/_rustshop/pkgs/aws-bootstrap/src/: cf-bootstrap-terraform.yaml  main.rs  opts.rs
infra/_rustshop/pkgs/env/: Cargo.toml
infra/_rustshop/pkgs/env/src/: lib.rs
infra/_rustshop/pkgs/rustshop-aws/: Cargo.toml
infra/_rustshop/pkgs/rustshop-aws/src/: main.rs
infra/_rustshop/pkgs/rustshop-bin-wrapper/: Cargo.toml  flake.nix
infra/_rustshop/pkgs/rustshop-bin-wrapper/src/: main.rs
infra/_rustshop/pkgs/rustshop-terraform/: Cargo.toml  README.md
infra/_rustshop/pkgs/rustshop-terraform/src/: main.rs
infra/_rustshop/templates/: env.template
infra/_rustshop/wrapper/src/: main.rs
infra/accounts/: .gitignore
infra/accounts/_common/: locals-common.tf  variables-common.tf
infra/accounts/dev/: locals-common.tf  main.tf  variables-account.tf
infra/accounts/prod/: main.tf  variables-account.tf  variables-common.tf
infra/accounts/root/: variables-account.tf
infra/bootstrap/: README.md
infra/root/: main.tf
infra/utils/: Cargo.toml  flake.nix  shell-hook.sh  terraform-init-workaround
infra/utils/aws-bootstrap/: Cargo.toml  Dockerfile  flake.nix
infra/utils/aws-bootstrap/src/: aws_api.rs  cf-bootstrap.yaml  list_accounts.rs  main.rs  opts.rs
infra/utils/pkgs/aws-bootstrap/src/: opts.rs
infra/utils/pkgs/env/: Cargo.toml
infra/utils/pkgs/env/src/: lib.rs
infra/utils/pkgs/terraform-wrapper/: Cargo.toml  README.md
infra/utils/pkgs/terraform-wrapper/src/: main.rs
infra/utils/terraform-wrapper/: Cargo.toml  flake.nix
infra/utils/terraform-wrapper/src/: main.rs
misc/git-hooks/: commit-template.txt  pre-commit
rustshop/: Cargo.toml  README.md  flake.nix  shell-hook.sh
rustshop/env/: Cargo.toml  README.md
rustshop/env/src/: cfg.rs  ioutil.rs  lib.rs
rustshop/old/aws-bootstrap/: aws-bootstrap.build.sh  flake.nix
rustshop/old/aws-bootstrap/src/: cf-bootstrap-kops.yaml  main.rs  opts.rs
rustshop/templates/: env.template  flake.nix
services/: Cargo.toml  Dockerfile.starter  README.md  flake.nix
services/app-common/: Cargo.toml
services/app-common/src/: opts.rs
services/common-app/: Cargo.toml  README.md
services/common-app/src/: axum.rs  lib.rs  opts.rs
services/common-app/src/axum/: error.rs
services/common-res-gen/: Cargo.toml  README.md
services/common-res-gen/src/: lib.rs  opts.rs
services/shopkeeper/: Cargo.toml  README.md
services/shopkeeper-res-gen/: Cargo.toml
services/shopkeeper-res-gen/kustomize/: deployment.yaml
services/shopkeeper-res-gen/src/: main.rs
services/shopkeeper/src/: main.rs
services/starter/: Cargo.toml
services/starter-res-gen/: Cargo.toml
services/starter-res-gen/src/: main.rs
services/starter/src/: main.rs
terraform/: .gitignore
terraform/_common/: locals-common.tf  variables-common.tf
terraform/prod/: main.tf
