[package]
name = "rustshop-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
error-stack = "0.1.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.24"
tracing = "0.1.35"
