[package]
name = "rustshop-env"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "A common library for handling `rustshop` utility environment/context"
documentation = "https://github.com/rustshop/rustshop"
homepage = "https://github.com/rustshop/rustshop"
repository = "https://github.com/rustshop/rustshop"
keywords = ["kubernetes", "infra", "cloud"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
error-stack = "0.2.4"
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.24"
tracing = "0.1.35"
