[package]
name = "common-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.5.11"
axum-server = "0.4.0"
clap = { version = "3.2.8", features = ["derive", "env"] }
error-stack = "0.1.1"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["macros", "signal"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.4", features = ["tracing", "trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["tracing", "env-filter"] }
