[package]
name = "common-res-gen"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "3.2.8", features = ["derive", "env"] }
derive_more = "0.99.17"
error-stack = "0.1.1"
# v1.23 is our cluster version at the time of setting this
# temporarily testing my fork with DSL-support
k8s-openapi = { version = "0.15.0", git = "https://github.com/dpc/k8s-openapi", branch = "issue-80", features = ["v1_23", "dsl"] }
serde = "1.0.138"
serde_yaml = "0.8.25"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["tracing", "env-filter"] }
