[package]
name = "starter-res-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "starter-res-gen"
path = "src/main.rs"

[dependencies]
tracing = "0.1.35"
common-res-gen = { version = "*", path = "../common-res-gen/" }
common-app = { version = "*", path = "../common-app/" }
clap = { version = "3.1.6", features = [ "derive", "env" ] }
error-stack = "0.1.1"
