[package]
name = "starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
app-common = { version = "*", path = "../app-common//" }
clap = { version = "3.1.6", features = [ "derive", "env" ] }
error-stack = "0.1.1"
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread"] }
axum = "0.5.11"
