[package]
name = "aws-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive", "env" ] }
color-eyre = { version = "0.6.1" }
eyre = "0.6.8"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
